# stigmark-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Rocket.toml.priv  bookmarks-2021-12-01.json  endpoints.md  todo.md
ext/chrome-edge-brave/: api-stigmark.js  background.js  chrome-ext.js  config.js  debug.js  manifest.json  popup.htm  popup.js  stigmark.js  token.js  ui-follow.js  ui-forgot.js  ui-login.js  ui-message.js  ui-navtab.js  ui-search.js  ui-signup.js  ui-stigmark.js  urls.js
ext/chrome-edge-brave/css/: popup.css
libs/stigmarks-sql-rs/: Cargo.toml
libs/stigmarks-sql-rs/examples/: sql-test.rs
libs/stigmarks-sql-rs/src/: lib.rs
scss/: styles.scss
sql/: stigmarks.sql
src/: basicauth.rs  config.rs  cors.rs  database.rs  files.rs  followers.rs  jwtauth.rs  login.rs  main.rs  response.rs  search.rs  signin.rs  signup.rs  stigmarks.rs  stigmers.rs  token.rs
src/handlers/: files.rs  followers.rs  login.rs  mod.rs  search.rs  signup.rs  stigmarks.rs  stigmers.rs
tests/stigmarks-sql-rs/: Cargo.toml
tests/stigmarks-sql-rs/src/: lib.rs
tests/test-app-sql-rs/: Cargo.toml
www/: admin.htm  collections.htm  config.htm  followers.htm  forgot.htm  index.htm  login.htm  search.htm  signin.htm  signup.htm  stigmers.htm
www/css/: styles.css  styles.css.map
www/dev/: forgot.htm  index.htm  login.htm  logout.htm  signup.htm  stigmers.htm
www/git/: 404.htm  admin.htm  collections.htm  config.htm  followers.htm  search.htm  signup.htm  stigmers.htm
www/js/: collections.js  followers.js  forgot.js  login.js  search.js  signin.js  signup.js  stigmers.js
(+23 files in other folders)
