[package]
name = "stigmark-rocket-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.5.2"
bcrypt = "0.10.1"
chrono = "0.4.19"
rocket-basicauth = {version = "1", default-features = false }
base64 = "0.13"
stigmarks-sql-rs = { path = "libs/stigmarks-sql-rs" }
jsonwebtoken = "7.2"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
